robballen75-Salesforce/4-7-15/src/objects/Custom_Files__c.object
<CustomObject>
    <description>A list of all custom DLLs / hotfixes sent to the customer.  These are one-off DLLs sent in lieu of things being included in an official update.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Link to the Account record for this download.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Custom Files</relationshipLabel>
        <relationshipName>Custom_Files</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Links to the Case for which the custom file was provided</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Custom Files</relationshipLabel>
        <relationshipName>Custom_Files</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_File_ID__c</fullName>
        <description>The external ID of the specific custom file that was sent.</description>
        <label>Custom File ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_File_Name_Link__c</fullName>
        <description>Hyperlink to the details of the hotfix.</description>
        <formula>HYPERLINK(&quot;http://bart/cs/search/hotfixDetails.asp?id=&quot; &amp;  Custom_File_ID__c ,  Custom_File_Name__c , &quot;_HotfixDetails&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom File Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_File_Name__c</fullName>
        <description>The name of the custom file / DLL provided to the customer</description>
        <label>Custom File Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_File_Reason__c</fullName>
        <description>The reason this custom file was provided to the customer.</description>
        <label>Custom File Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Custom_File_Sent_By__c</fullName>
        <description>Who sent the custom file to the customer.</description>
        <label>Custom File Sent By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_File_Sent__c</fullName>
        <description>The date the custom file was sent to the customer.</description>
        <label>Custom File Sent</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Version__c</fullName>
        <description>The &quot;product version&quot; of the hotfix DLL, if applicable.</description>
        <label>Custom File Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Custom File</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Case__c</columns>
        <columns>Custom_File_Name__c</columns>
        <columns>Custom_File_Reason__c</columns>
        <columns>Custom_File_Sent__c</columns>
        <columns>Custom_File_Sent_By__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CF-{0000}</displayFormat>
        <label>Custom File Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>